--- a/index.html
+++ b/index.html
@@ -69,31 +69,32 @@
         </form>
       </div>
 
-      <div class="midbar">
-      <div class="col-md-4 getalbum">
-      <form id="album-by-user">
-        <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get Albums">
-      </form>
-      </div>
-
-      <div class="col-md-4 get-artists">
-        <form id="get-artists">
-          <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get your artists">
+      <div class="row">
+        <div class="col-md-6 getalbum">
+        <form id="album-by-user">
+          <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get Albums">
         </form>
+        </div>
+        <div class="col-md-6">
+          <form id="get-lyrics">
+            <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get Lyrics">
+          </form>
+        </div>
       </div>
-    </div>
-    <div class="show-artists">
-      <h4>My artists: </h4>
-      <ul class="artists"></ul>
-    </div>
 
-    <form id="get-lyrics">
-      <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get Lyrics">
-    </form>
+        <div class="col-md-6 get-artists">
+          <form id="get-artists">
+            <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get your artists">
+          </form>
+        <div class="show-artists">
+          <h4>My artists: </h4>
+          <ul class="artists"></ul>
+        </div>
+      </div>
+
 
     <p class="lyrics"></p>
   </div>
-
   <div class="modal fade signUpModal" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
