Add Get Album and Get Song functionality

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
           <form id="get-songs">
             <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get Your Songs">
           </form>
+          <p class="show-songs">Your Songs:</p>
         </div>
       </div>
       <div class="row">
