Changed classes to improve styling

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             </nav>
             </header>
 
-    <div class="row row-top">
-
+    <div class="row-top">
+      <div class="row">
     <div class="make-album">
       <form id="add-album">
         <input type="text" name="album[name]" id="add-album-name" placeholder="Enter Album Name">
