--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <!-- Do not add `script` tags unless you know what you are doing -->
 <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
 <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
-<script type="text/javascript" src="http://tracking.musixmatch.com/t1.0/AMa6hJCIEzn1v8RuOP"></script>
-  </head>
+</head>
   <body class="container-fluid">
     <header>
       <nav class="navbar navbar-default navbar-fixed-top">
@@ -81,7 +80,6 @@
             <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get your artists">
           </form>
         <div class="show-artists">
-          <h4>My artists: </h4>
           <ul class="artists"></ul>
         </div>
       </div>
@@ -91,9 +89,11 @@
           <form id="get-songs">
             <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get Your Songs">
           </form>
-          <p class="show-songs">Your Songs:</p>
+          <p class="show-songs"></p>
         </div>
-        <div class="col-md-6 songs">
+      </div>
+      <div class="row">
+        <div class="col-md-6 songs recommender">
           <form id="recommender">
             <input type="submit" class="btn btn-primary btn-top" name="submit" value="You might like...">
           </form>
