Added error handling for sign in and sign up

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
           <input type="password" name="credentials[password_confirmation]" id="sign-up-password-confirmation" placeholder="Confirm PW">
           <input type="submit" class="btn btn-primary" name="submit" value="Sign Up">
         </form>
+        <span class="debug"></span>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -137,6 +138,7 @@
         <input type="password" name="credentials[password]" id="sign-in-password" placeholder="Enter Password">
         <input type="submit" class="btn btn-primary" name="submit" value="Sign In">
       </form>
+      <span class="sign_in_debug"></span>
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
