--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <h4 class="modal-title" id="exampleModalLabel">Sign Up</h4>
+      <h4 class="modal-title" id="exampleModalLabel">Sign In</h4>
     </div>
     <div class="modal-body">
       <form id="sign-in">
@@ -160,6 +160,7 @@
         <input type="password" name="passwords[new]" id="change-password-newpw" placeholder="Enter New Password">
         <input type="submit" class="btn btn-primary" name="submit" value="Change Password">
       </form>
+      <span class="pw_debug"></span>
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
