Added hide feature so main features don't show if you aren't signed in

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             </nav>
             </header>
 
+    <div class="everything">
     <div class="row-top">
     <div class="make-album">
       <form id="add-album">
@@ -102,6 +103,7 @@
       </div>
 
     <p class="lyrics"></p>
+  </div>
   <div class="modal fade signUpModal" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -168,6 +170,5 @@
   </div>
 </div>
 </div>
-
   </body>
 </html>
