--- a/index.html
+++ b/index.html
@@ -101,8 +101,6 @@
           <span class="recommendations"></span>
         </div>
       </div>
-
-    <p class="lyrics"></p>
   </div>
   <div class="modal fade signUpModal" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
   <div class="modal-dialog" role="document">
@@ -127,6 +125,12 @@
   </div>
 </div>
 
+<div class="lyrics">
+  <form id="get-lyrics">
+    <input type="submit" class="btn btn-primary" name="submit" value="Get Lyrics">
+  </form>
+  <span class="add_lyrics"></span>
+</div>
 <div class="modal fade signUpModal" id="signInModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
 <div class="modal-dialog" role="document">
   <div class="modal-content">
