Added Ability to Choose song lyrics

--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
 
 <div class="lyrics">
   <form id="get-lyrics">
+    <input type="text" name="lyrics[artist]" id="lyrics-artist" placeholder="Enter Artist Name">
+    <input type="text" name="lyrics[title]" id="lyrics-title" placeholder="Enter Song Title">
     <input type="submit" class="btn btn-primary" name="submit" value="Get Lyrics">
   </form>
   <span class="add_lyrics"></span>
