--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
       <form id="add-album">
         <input type="text" name="album[name]" id="add-album-name" placeholder="Enter Album Name">
         <input type="text" name="album[artist_id]" id="add-album-name" placeholder="Enter Artist ID">
-        <input type="text" name="album[song_id]" id="add-album-name" placeholder="Enter Song ID">
         <input type="submit" class="btn btn-primary btn-top" name="submit" value="Add an Album">
       </form>
     </div>
@@ -60,7 +59,7 @@
       <div class="song">
         <form id="add-song">
           <input type="text" name="song[name]" id="add-song-name" placeholder="Enter Song Name">
-          <input type="text" name="song[album]" id="add-song-album" placeholder="Enter Song Album">
+          <input type="text" name="song[album_id]" id="add-song-album" placeholder="Enter Song Album">
           <input type="text" name="song[artist_id]" id="add-artist-id" placeholder="Enter Artist ID">
           <input type="submit" class="btn btn-primary btn-top" name="submit" value="Add a Song">
         </form>
@@ -106,6 +105,7 @@
     <form id="get-lyrics">
       <input type="text" name="lyrics[artist]" id="lyrics-artist" placeholder="Enter Artist Name">
       <input type="text" name="lyrics[title]" id="lyrics-title" placeholder="Enter Song Title">
+      <input type="text" name="lyrics[song_id]" id="lyrics-title" placeholder="Enter Song ID">
       <input type="submit" class="btn btn-primary" name="submit" value="Get Lyrics">
     </form>
     <span class="add_lyrics"></span>
