Added print translation method

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
       <form id="translate">
         <input type="submit" class="btn btn-primary" name="submit" value="Translate Lyrics">
       </form>
+      <span class="add_translation">test</span>
     </div>
-</div>
 </div>
 
   <div class="modal fade signUpModal" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
