--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="song">
         <form id="add-song">
           <input type="text" name="song[name]" id="add-song-name" placeholder="Enter Song Name">
-          <input type="text" name="song[album_id]" id="add-song-album" placeholder="Enter Song Album">
+          <input type="text" name="song[album_id]" id="add-song-album" placeholder="Enter Album ID">
           <input type="text" name="song[artist_id]" id="add-artist-id" placeholder="Enter Artist ID">
           <input type="submit" class="btn btn-primary btn-top" name="submit" value="Add a Song">
         </form>
