Added in handling to get rid of junk text in lyrics

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <form id="translate">
         <input type="submit" class="btn btn-primary" name="submit" value="Translate Lyrics">
       </form>
-      <span class="add_translation">test</span>
+      <span class="add_translation"></span>
     </div>
 </div>
 
