Added CRUD for Album

--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
         <input type="text" name="album[artist_id]" id="add-album-name" placeholder="Enter Artist ID">
         <input type="submit" class="btn btn-primary btn-top" name="submit" value="Add an Album">
       </form>
+      <form id="update-album">
+        <input type="text" name="album[name]" id="add-album-name" placeholder="Enter Album Name">
+        <input type="text" name="album[id]" id="add-album-name" placeholder="Enter Album ID">
+        <input type="submit" class="btn btn-primary btn-top" name="submit" value="Update an Album">
+      </form>
+      <form id="delete-album">
+        <input type="text" name="album[id]" id="add-album-name" placeholder="Enter Album ID">
+        <input type="submit" class="btn btn-primary btn-top" name="submit" value="Delete This Album">
+      </form>
+
       <span class="album_msg"></span>
     </div>
       <div class="artist">
