--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
         </form>
         <span class="song_msg"></span>
       </div>
+      <div class="song">
+        <form id="update-song">
+          <input type="text" name="song[name]" id="add-song-name" placeholder="Enter Song Name">
+          <input type="text" name="song[album_id]" id="add-song-album" placeholder="Enter Album ID">
+          <input type="text" name="song[artist_id]" id="add-artist-id" placeholder="Enter Artist ID">
+          <input type="text" name="song[song_id]" id="add-artist-id" placeholder="Enter Artist ID">
+          <input type="submit" class="btn btn-primary btn-top" name="submit" value="Update a Song">
+        </form>
+      </div>
     </div>
       <div class="row row2">
         <div class="getalbum col-md-6">
