--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <input type="text" name="song[name]" id="add-song-name" placeholder="Enter Song Name">
           <input type="text" name="song[album_id]" id="add-song-album" placeholder="Enter Album ID">
           <input type="text" name="song[artist_id]" id="add-artist-id" placeholder="Enter Artist ID">
-          <input type="text" name="song[song_id]" id="add-artist-id" placeholder="Enter Artist ID">
+          <input type="text" name="song[song_id]" id="add-artist-id" placeholder="Enter Song ID">
           <input type="submit" class="btn btn-primary btn-top" name="submit" value="Update a Song">
         </form>
       </div>
