Added delete album feature

--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
           <input type="submit" class="btn btn-primary btn-top" name="submit" value="Update a Song">
         </form>
       </div>
+      <div class="song">
+        <form id="delete-song">
+          <input type="text" name="song[song_id]" id="add-song-album" placeholder="Enter Song ID">
+          <input type="submit" class="btn btn-primary btn-top" name="submit" value="Delete This Song">
+        </form>
+      </div>
     </div>
       <div class="row row2">
         <div class="getalbum col-md-6">
