Fixed UI Crud for Songs

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
       <div class="song">
         <form id="add-song">
           <input type="text" name="song[name]" id="add-song-name" placeholder="Enter Song Name">
-          <input type="text" name="song[album_id]" id="add-song-album" placeholder="Enter Album ID">
-          <input type="text" name="song[artist_id]" id="add-artist-id" placeholder="Enter Artist ID">
+          <input type="text" name="song[album]" id="add-song-album" placeholder="Enter Album Name">
           <input type="submit" class="btn btn-primary btn-top" name="submit" value="Add a Song">
         </form>
         <span class="song_msg"></span>
@@ -80,8 +79,7 @@
       <div class="song">
         <form id="update-song">
           <input type="text" name="song[name]" id="add-song-name" placeholder="Enter Song Name">
-          <input type="text" name="song[album_id]" id="add-song-album" placeholder="Enter Album ID">
-          <input type="text" name="song[artist_id]" id="add-artist-id" placeholder="Enter Artist ID">
+          <input type="text" name="song[album]" id="add-song-album" placeholder="Enter Album Name">
           <input type="text" name="song[song_id]" id="add-artist-id" placeholder="Enter Song ID">
           <input type="submit" class="btn btn-primary btn-top" name="submit" value="Update a Song">
         </form>
