Added Update button for each song to avoid sending song ID

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="everything">
     <div class="row-top">
-    <div class="make-album">
+    <!-- <div class="make-album">
       <form id="add-album">
         <input type="text" name="album[name]" id="add-album-name" placeholder="Enter Album Name">
         <input type="text" name="album[artist_id]" id="add-album-name" placeholder="Enter Artist ID">
@@ -56,8 +56,8 @@
       <form id="delete-album">
         <input type="text" name="album[id]" id="add-album-name" placeholder="Enter Album ID">
         <input type="submit" class="btn btn-primary btn-top" name="submit" value="Delete This Album">
-      </form>
-
+      </form> -->
+<!--
       <span class="album_msg"></span>
     </div>
       <div class="artist">
@@ -67,7 +67,7 @@
           <input type="submit" class="btn btn-primary btn-top" name="submit" value="Add an Artist">
         </form>
         <span class="artist_msg"></span>
-        </div>
+        </div> -->
       <div class="song">
         <form id="add-song">
           <input type="text" name="song[name]" id="add-song-name" placeholder="Enter Song Name">
@@ -90,8 +90,16 @@
           <input type="submit" class="btn btn-primary btn-top" name="submit" value="Delete This Song">
         </form>
       </div>
+    <div class="newrow">
+      <div class="songs">
+        <form id="get-songs">
+          <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get Your Songs">
+        </form>
+        <p class="show-songs"></p>
+      </div>
     </div>
-      <div class="row row2">
+  </div>
+      <!-- <div class="row row2">
         <div class="getalbum col-md-6">
         <form id="album-by-user">
           <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get Albums">
@@ -109,22 +117,14 @@
           <ul class="artists"></ul>
         </div>
       </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6 songs">
-          <form id="get-songs">
-            <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get Your Songs">
-          </form>
-          <p class="show-songs"></p>
-        </div>
-      </div>
-        <div class="row">
+      </div> -->
+        <!-- <div class="row">
           <div class="col-md-6 songs recommender">
             <form id="recommender">
               <input type="submit" class="btn btn-primary btn-top" name="submit" value="You might like...">
             </form>
             <span class="recommendations"></span>
-          </div>
+          </div> -->
         </div>
   <div class="row lyrics_row">
   <div class="lyrics col-md-6">
