--- a/index.html
+++ b/index.html
@@ -70,17 +70,12 @@
         </div> -->
       <div class="song">
         <form id="add-song">
+          <input type="text" name="song[artist]" id="add-song-name" placeholder="Enter Artist Name">
           <input type="text" name="song[name]" id="add-song-name" placeholder="Enter Song Name">
           <input type="text" name="song[album]" id="add-song-album" placeholder="Enter Album Name">
           <input type="submit" class="btn btn-primary btn-top" name="submit" value="Add a Song">
         </form>
         <span class="song_msg"></span>
-      </div>
-      <div class="song">
-        <form id="delete-song">
-          <input type="text" name="song[song_id]" id="add-song-album" placeholder="Enter Song ID">
-          <input type="submit" class="btn btn-primary btn-top" name="submit" value="Delete This Song">
-        </form>
       </div>
     <div class="newrow">
       <div class="songs">
