Fixed some bugs where songs would not delete

--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
             </form>
             <span class="recommendations"></span>
           </div> -->
-        </div>
   <div class="row lyrics_row">
   <div class="lyrics col-md-6">
     <form id="get-lyrics">
@@ -182,7 +181,7 @@
   <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <h4 class="modal-title" id="exampleModalLabel">Sign Up</h4>
+      <h4 class="modal-title" id="exampleModalLabel">Change Password</h4>
     </div>
     <div class="modal-body">
       <form id="change-password">
