Added sign in validation
Sign up now confirms your sign up, and there is a welcome message

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="container-fluid">
           <div class="navbar-header">
             <h1 class="header">Translatr</h1>
+            <p id="user-name"></p>
           </div>
               <ul class="nav navbar-nav navbar-right">
                 <li class="signUpNav">
